fixed bugs on mobile

--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -104,7 +104,7 @@ $bg-2: #f9f7f7;
     }
     .skill-desc {
       padding: 10px;
-      line-height: 1.3;
+      line-height: 1.2;
       font-size: 0.9rem !important;
     }
   }
